# bril

./: README.md  install.sh
assignment/task1/: local_dce.py  local_dce_brench_wayne.toml  lvn.py  lvn_brench_wayne.toml  lvn_dce_only_brench_wayne.toml  trivial_dce.py  trivial_dce_brench_example.toml  trivial_dce_brench_wayne.toml
assignment/task2/: generic_global_dataflow_solver.py  global_constant_folding.py  global_liveness_analysis.py  pivot_csv.py  reach_definitions_solver.py  task2_brench.toml  task2_result.csv  task2_result_table.csv
assignment/task3/: cfg.py  data_processing_n_vis.ipynb  dominator_utilities.py  loop_optimization.py  loop_optimization_2.py  mannual_check_testcase.ipynb  out.csv  reaching_definitions.py  run_benchmarks.py  task3_brench.toml  worklist_solver.py
assignment/task4/: bril_core_constants.py  bril_core_utilities.py  cfg.py  data_processing_n_vis.ipynb  dead_store_elimination.py  dead_store_elimination_arc.py  mannual_check_testcase.ipynb  optimized_test.bril  optimized_test_1_arc.bril  optimized_test_2.bril  optimized_test_3.bril  out2.csv  out_p.csv  task4_brench.toml  test_1.bril
brench/: README.md  brench.py  example.toml  pyproject.toml
examples/remove_nops/: README.md  brench.toml  remove_nops.py
examples/test/lvn/: simple_case.bril
